--- a/templates/leads/home.html
+++ b/templates/leads/home.html
@@ -30,7 +30,7 @@
         <table class="table">
             <thead class="thead-light">
             <tr>
-                <th scope="col"></th>
+                <th scope="col">iD</th>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Age</th>
