--- a/templates/leads/home.html
+++ b/templates/leads/home.html
@@ -6,10 +6,6 @@
         <div class="container">
             <h1 class="jumbotron-heading">Customer Relationship Management</h1>
             <p class="lead text-muted">Customer relationship management (CRM) is a technology for managing all your company's relationships and interactions with customers and potential customers. The goal is simple: Improve business relationships. A CRM system helps companies stay connected to customers, streamline processes, and improve profitability.</p>
-            <p>
-            <a href="#" class="btn btn-primary my-2">LogIn</a>
-            <a href="#" class="btn btn-secondary my-2">Create an account</a>
-            </p>
         </div>
     </div>
 
@@ -20,9 +16,13 @@
                 <div class="col-3">
                     <a class="me-3 py-2 text-dark text-decoration-none h6" href="">View all categories</a>
                 </div>
+                {% if user.is_organizer %}
                 <div class="col-9 text-end">
-                    <a class="me-3 py-2 text-dark text-decoration-none h6" href="{% url 'leads:create' %}">Create a new Lead</a>
+                    <a class="me-3 py-2 text-dark text-decoration-none h6" href="{% url 'leads:create' %}">
+                        Create a new Lead
+                    </a>
                 </div>
+                {% endif %}
             </div>
             <hr>
         </div>
