password rest + organization/agent/lead

--- a/templates/leads/retrieve.html
+++ b/templates/leads/retrieve.html
@@ -4,6 +4,9 @@
 {% block content %}
     <div>
         <h2>Leads</h2>
+        <div class="text-end">
+            <a class="me-3 py-2 text-dark text-decoration-none h6" href="{% url 'leads:create' %}">Create a new Lead</a>
+        </div>
         <hr>
         
         <div class="album py-5">
