--- a/templates/leads/home.html
+++ b/templates/leads/home.html
@@ -59,8 +59,38 @@
             </tr>
             </tbody>
             {% endfor %}
-
+            
         </table>
+    </div>
+    <div class="container">
+        {% if x_leads.exists %}
+                <div class="album py-5">
+                    <h1>Unassigned Leads</h1>
+                    <hr>
+                    <div class="container">
+                        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+                            {% for x in x_leads %}
+                            <div class="col">
+                            <div class="card shadow-sm">
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="150" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
+                                <div class="card-body">
+                                <p class="card-text h6">{{x.first_name}} {{x.last_name}}</p>
+                                <p>{{x.age}} | {{x.agent}}</p>
+        
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a class="btn btn-outline-primary btn-sm" href="{% url 'leads:assign_agent' x.id %}">Assign an agent</a>                                        
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            </div>
+                            {% endfor %}
+        
+                        </div>
+                    </div>
+                </div>
+        {% endif %}
     </div>
 
 {% endblock %}
