--- a/templates/leads/home.html
+++ b/templates/leads/home.html
@@ -14,7 +14,7 @@
             <h1>Leads</h1>
             <div class="row">
                 <div class="col-3">
-                    <a class="me-3 py-2 text-dark text-decoration-none h6" href="">View all categories</a>
+                    <a class="me-3 py-2 text-dark text-decoration-none h6" href="{% url 'leads:category_list' %}">View all categories</a>
                 </div>
                 {% if user.is_organizer %}
                 <div class="col-9 text-end">
